# JpsiEIC

./: GenElecPair.C  README.md  Reco_analysis.C  cos2phivspt.csv  no_photon_cos2phivspt.csv  qt2crosssection.csv
project/: CMakeLists.txt
project/Model/: CMakeLists.txt  Jpsi_model.cc
